rapport de stage 2A: derniers réglage, en cours…

--- a/stages/2A.tex
+++ b/stages/2A.tex
@@ -83,10 +83,6 @@ Parmis ces produits, on peut citer trois principales gammes:
 
 \clearpage
 
-\section{Équipes}
-
-\clearpage
-
 \section{Sujet, débuts et premières impressions du stage}
 \subsection{Sujet du stage}
 
@@ -263,9 +259,15 @@ J’ai aussi pu rédiger un peu de documentation, dans mon «Notebook», et disc
 
 \section{Remerciements}
 
-On remerciera enfin le site internet http://baconipsum.com, à qui on doit un paragraphe plein d’humour dans ce rapport trop sérieux:
+Je tiens naturellement à commencer par remercier Benjamin Cabé, mon maître de stage, qui a su me proposer différents projets qui m’ont tous intéressés alors que le sujet initial du stage était tombé à l’eau.
 
-Bacon ipsum dolor sit amet swine venison capicola, filet mignon pork beef tenderloin tongue bacon ball tip pig. Rump shoulder corned beef chuck, bacon capicola jowl pastrami meatloaf chicken ball tip ground round filet mignon sausage. Kevin kielbasa meatloaf short ribs, strip steak corned beef meatball pork loin tri-tip andouille jowl filet mignon. Ham hock strip steak prosciutto, andouille tail corned beef ham swine kielbasa. Pork chop boudin spare ribs swine sirloin capicola pastrami meatball tenderloin jowl turkey andouille pancetta cow.
+~
+
+Il me faut également remercier Fabien Fleutot, qui m’a fait découvrir cette entreprise où j’ai passé un excellent stage.
+
+~
+
+Plus généralement, j’ai passé d’excellents moments avec les équipes 
 
 \clearpage
 
